--- a/app/src/main/res/layout/layout_view_hunger_level.xml
+++ b/app/src/main/res/layout/layout_view_hunger_level.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginLeft="40dp"
+    android:layout_marginStart="40dp"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
     android:layout_width="match_parent"
