--- a/app/src/main/res/layout/list_daily_meal_view_item.xml
+++ b/app/src/main/res/layout/list_daily_meal_view_item.xml
@@ -38,7 +38,7 @@
                 android:gravity="center_vertical"
                 android:text="@string/meal_lunch"
                 android:textColor="#de000000"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
