--- a/app/src/main/res/layout/report_period_spinner_adapter.xml
+++ b/app/src/main/res/layout/report_period_spinner_adapter.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:minHeight="?attr/listPreferredItemHeight"
     android:gravity="center"
-    android:paddingLeft="15dp"
+    android:paddingStart="15dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
