--- a/app/src/main/res/layout/date_list_view_item.xml
+++ b/app/src/main/res/layout/date_list_view_item.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
-       android:id="@+id/subview"
-        android:orientation="vertical"
-        android:gravity="center"
+        android:id="@+id/subview"
         android:layout_width="50dp"
-        android:layout_height="50dp">
-    <TextView
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        android:id="@+id/day_item"
-        android:text="01"
-        android:gravity="bottom"
-        android:textAlignment="gravity"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/week_day_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="top|center"
+            android:text="seg"
+            android:textSize="10sp" />
 
-    <TextView
-        android:id="@+id/week_day_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="top|center"
-        android:text="seg"
-        android:textSize="10sp" />
+        <TextView
+            android:id="@+id/day_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="01"
+            android:paddingTop="1dp"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
     </LinearLayout>
 
 
