--- a/app/src/main/res/layout/date_list_view_item.xml
+++ b/app/src/main/res/layout/date_list_view_item.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="01"
-            android:paddingTop="1dp"
+            android:gravity="center"
             android:textAlignment="center"
             android:textSize="20sp" />
 
