--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!--<PreferenceCategory android:title="Usuario">-->
+        <!--<EditTextPreference android:title="@string/user_name" android:summary="@string/preference_user_name_summary" android:key="@string/app_name" />-->
+    <!--</PreferenceCategory>-->
 
     <PreferenceCategory
         android:title="@string/preference_category_reminders">
 
         <SwitchPreference
+            android:icon="@drawable/meal_breakfast_flat"
             android:key="PREFERENCE_BREAKFAST_REMINDER_ENABLED"
             android:summary="@string/preferences_reminder_breakfast_summary"
             android:title="@string/preferences_reminder_breakfast" />
 
         <SwitchPreference
+            android:icon="@drawable/meal_lunch_flat"
             android:key="PREFERENCE_LUNCH_REMINDER_ENABLED"
             android:summary="@string/preferences_reminder_lunch_summary"
             android:title="@string/preferences_reminder_lunch" />
 
         <SwitchPreference
+            android:icon="@drawable/meal_snack_flat"
             android:key="PREFERENCE_SNACK_REMINDER_ENABLED"
             android:summary="@string/preferences_reminder_snack_summary"
             android:title="@string/preferences_reminder_snack" />
 
         <SwitchPreference
+            android:icon="@drawable/meal_dinner_flat"
             android:key="PREFERENCE_DINNER_REMINDER_ENABLED"
             android:summary="@string/preferences_reminder_dinner_summary"
             android:title="@string/preferences_reminder_dinner" />
