--- a/app/src/main/res/layout/fragment_list_meals_2.xml
+++ b/app/src/main/res/layout/fragment_list_meals_2.xml
@@ -27,17 +27,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--<android.support.v4.view.ViewPager-->
-        <!--android:id="@+id/daily_meal_view_pager"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/navigation_header" />-->
-
-
     <com.asksira.loopingviewpager.LoopingViewPager
         android:id="@+id/daily_meal_view_pager"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +37,17 @@
         android:layout_height="0dp"
         app:isInfinite="false" />
 
+    <com.leinardi.android.speeddial.SpeedDialView
+        android:id="@+id/speedDial"
+        app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        app:sdMainFabClosedSrc="@drawable/ic_add" />
+
 <android.support.design.widget.FloatingActionButton
+    android:visibility="gone"
     android:id="@+id/add_new_meal_button"
     android:src="@drawable/ic_add"
     android:layout_width="wrap_content"
