--- a/app/src/main/res/layout/list_daily_meal_view_item.xml
+++ b/app/src/main/res/layout/list_daily_meal_view_item.xml
@@ -3,6 +3,7 @@
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
+    android:id="@+id/cell"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -22,6 +23,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:padding="3dp"
+            android:tint="@color/black"
             android:src="@drawable/meal_breakfast_flat" />
 
         <LinearLayout
