--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,6 +39,7 @@
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         ads:adSize="BANNER"
+        android:visibility="gone"
         ads:adUnitId="@string/admob_app_banner_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
