--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,5 +38,11 @@
     <style name="Theme_Dialog" parent="Base.Theme.AppCompat.Dialog">
     </style>
 
-
+    <style name="DefaultTitle" >
+        <item name="background">@android:color/transparent</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">10dp</item>
+    </style>
 </resources>
