--- a/app/src/main/res/layout/dialog_new_meal_type.xml
+++ b/app/src/main/res/layout/dialog_new_meal_type.xml
@@ -77,13 +77,13 @@
 
         <Button
             android:id="@+id/saveButton"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            style="@style/ButtonPositive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
             android:text="@string/save"
-            android:textColor="@color/primary_dark"
+
             app:layout_constraintEnd_toEndOf="parent"
 
             app:layout_constraintTop_toBottomOf="@+id/mealListRV" />
